Finished Mission Control (now known as "Your Schoop." Also fixed up some behind the scenes stuff! More otwgit add . && git add -u

--- a/web-prototype/css/app.css
+++ b/web-prototype/css/app.css
@@ -5,6 +5,96 @@
 	--today-table-border-radius: 10px;
 }
 
+@media only screen and (max-width: 599px) {
+	h1 {
+		font-size: 25px;
+	}
+
+	table.today-schedule tr {
+		font-size: 17px;
+	}
+
+	table.today-schedule tr {
+		font-size: 14px;
+	}
+
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 16px;
+	}
+}
+
+@media only screen and (min-width: 600px) and (max-width: 779px) {
+	table.today-schedule tr {
+		font-size: 18px;
+	}
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 17px;
+	}
+}
+
+/*SPECIAL*/
+@media only screen and (min-width: 780px) {
+	table.today-schedule tr {
+		font-size: 20px;
+	}
+}
+
+@media only screen and (min-width: 650px) and (max-width: 949px) {
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.time {
+		font-size: 30px !important;
+	}
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 25px !important;
+	}
+}
+
+@media only screen and (max-width: 949px) {
+	div.gridded-items {
+		grid-template-columns: auto;
+	}
+	div.gridded-items div.gridded-item-part {
+		margin-bottom: calc(var(--main-content-padding) / 2);
+	}
+	div.gridded-items div.gridded-item-part:first-child {
+		margin-bottom: none;
+	}
+
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 18px;
+	}
+}
+
+@media only screen and (min-width: 950px) {
+	div.gridded-items {
+		grid-template-columns: 29fr 21fr;
+	}
+	table.today-schedule {
+		min-height: 425px;
+	}
+	table.today-schedule tr {
+		font-size: 20px;
+	}
+
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 20px;
+	}
+}
+
+/*SPECIAL*/
+@media only screen and (max-width: 350px) {
+	h1 {
+		font-size: 22px;
+	}
+
+	table.today-schedule tr {
+		font-size: 12px;
+	}
+
+	div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+		font-size: 15px !important;
+	}
+}
+
 html, body {
 	font-family: 'Karla', sans-serif;
 	background: #f4f4f4;
@@ -36,13 +126,13 @@ table.today-schedule {
 
 	width: 100%;
 	height: auto;
+	/*min-height: 425px;*/
 
 	table-layout: fixed; /* keeps all boxes equal */
 }
 
 table.today-schedule tr {
 	border-top: 1px solid #ccc;
-	font-size: 20px;
 	position: relative;
 }
 
@@ -61,6 +151,7 @@ table.today-schedule tr.event-light {
 table.today-schedule tr.event-has-link {
 	cursor: pointer;
 	user-select: none;
+	-webkit-user-select: none;
 }
 
 table.today-schedule tr td {
@@ -99,13 +190,139 @@ p.zoom-link-hint {
 
 div.gridded-items {
 	display: grid;
-	grid-template-columns: 62fr 38fr;
+	/*grid-template-columns: 31fr 17fr;*/
 	/*grid-template-columns: auto;*/
 	grid-gap: var(--main-content-padding);
 }
 
 div.mission-control-outer div.gridded-mission-control {
 	display: grid;
-	grid-template-rows: 25fr 20fr 55fr;
+	/*grid-template-rows: 25fr 20fr 55fr;*/
+	grid-template-rows: 3fr auto 5fr;
 	border-radius: var(--today-table-border-radius);
+	min-height: 425px;
+}
+
+div.mission-control-part {
+	border-top: 1px solid #ccc;
+}
+
+div.mission-control-part:first-child {
+	border-top: none;
+}
+
+div.mission-control-part.qotd {
+	background: #fff;
+	padding: 10px;
+}
+
+div.mission-control-part.qotd div.quote-content {
+	font-size: 20px;
+}
+
+div.mission-control-part.qotd div.quote-author {
+	font-weight: 700;
+}
+
+div.mission-control-part.current-status {
+	background: #fff;
+	display: grid;
+	/*grid-template-rows: auto;*/
+	grid-template-columns: repeat(2, 1fr);
+	/*grid-gap: 1px;*/
+}
+
+div.mission-control-part.current-status div.mission-control-status-container {
+	/*background-color: #f00;*/
+	/*padding: 10px;*/
+	border-right: 1px solid #ccc;
+	position: relative;
+}
+
+div.mission-control-part.current-status div.mission-control-status-container:last-child {
+	border-right: none;
+}
+
+div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field {
+	text-align: center;
+}
+
+div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.time {
+	font-size: 25px;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 500;
+}
+
+div.mission-control-part.current-status div.mission-control-status-container div.mission-control-status-field.event {
+	/*font-size: 20px;*/
+	/*font-family: 'Poppins', sans-serif;*/
+	font-weight: 700;
+}
+
+div.mission-control-status-field-container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	width: 100%;
+	text-align: center;
+}
+
+/*div.mission-control-part.current-status div.mission-control-status-container.now {
+	text-align: left;
+}
+
+div.mission-control-part.current-status div.mission-control-status-container.up-next {
+	text-align: right;
+}*/
+
+div.mission-control-part.current-status div h4 {
+	margin-top: 10px;
+	margin-left: 10px;
+	font-size: 0.9em;
+}
+
+div.loading-overlay {
+	width: 100vw;
+	height: 100vh;
+
+	position: fixed;
+	z-index: 9997;
+
+	background: #000;
+}
+
+div.loading-overlay.hidden {
+	display: none;
+}
+
+div.loading-overlay div.loading-text {
+	color: #fff;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
+	font-size: 10.5vw;
+
+	user-select: none;
+	-webkit-user-select: none;
+	
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	text-align: left;
+	min-width: 52.4vw;
+}
+
+@keyframes loadinganim {
+	0% { content: ''; }
+	33% { content: '.'; }
+	67% { content: '..'; }
+	100% { content: '...'; }
+}
+
+div.loading-overlay div.loading-text::after {
+	content: '';
+	animation: loadinganim 0.5s linear infinite;
 }
